--- a/salt/dns/resolv.conf.jinja
+++ b/salt/dns/resolv.conf.jinja
@@ -1,3 +1,2 @@
 search {{salt['pillar.get']('engine:network:domaine_name')}}
-nameserver {{salt['pillar.get']('engine:master:masterip')}}
-{% if salt['pillar.get']('core:ha') == true %}nameserver {{salt['pillar.get']('engine:master:slaveip')}}{% endif %}
+nameserver {{salt['pillar.get']('engine:servers:dns_server_ip')}}
