--- a/salt/dns/named.conf.jinja
+++ b/salt/dns/named.conf.jinja
@@ -1,5 +1,5 @@
 options {
-	listen-on port 53 { 127.0.0.1; {{salt['pillar.get']('engine:master:masterip')}};};
+	listen-on port 53 { 127.0.0.1; {{salt['pillar.get']('engine:servers:dns_server_ip')}};};
 	listen-on-v6 port 53 { ::1; };
 	directory 	"/var/named";
 	dump-file 	"/var/named/data/cache_dump.db";
