--- a/salt/dns/forward.jinja
+++ b/salt/dns/forward.jinja
@@ -10,11 +10,36 @@ $TTL 86400
 @       IN  A           {{salt['pillar.get']('engine:master:masterip')}}
 
 {{salt['pillar.get']('engine:master:masterid')}}          IN  A   {{salt['pillar.get']('engine:master:masterip')}}
-{% for host, args in salt['pillar.get']('computes', {}).items() %}{{host}}          IN  A   {{ args.ip }}
-{% if args.bmc is defined %}{{args.bmc.name}}          IN  A   {{args.bmc.ip}}{% endif %}
-{% endfor %}
 
-{% for host, args in salt['pillar.get']('logins', {}).items() %}{{host}}          IN  A   {{ args.ip }}{% endfor %}
+#############################################
+########## COMPUTES
+###
+{% for group, argu in salt['pillar.get']('computes', {}).items() %}
+##########
+# {{group}}
 
-{% for host, args in salt['pillar.get']('ios', {}).items() %}{{host}}          IN  A   {{ args.ip }}{% endfor %}
+{% for host, args in argu.items() %}{{host}}          IN  A   {{ args.ip }}
+{% if args.bmc is defined %}  {{args.bmc.name}}          IN  A   {{args.bmc.ip}}{% endif %}
+{% endfor %}{% endfor %}
+#############################################
+########## LOGINS
+###
+{% for group, argu in salt['pillar.get']('logins', {}).items() %}
+##########
+# {{group}}
+
+{% for host, args in argu.items() %}{{host}}          IN  A   {{ args.ip }}
+{% if args.bmc is defined %}  {{args.bmc.name}}          IN  A   {{args.bmc.ip}}{% endif %}
+{% endfor %}{% endfor %}
+#############################################
+########## IO
+###
+{% for group, argu in salt['pillar.get']('ios', {}).items() %}
+##########
+# {{group}}
+
+{% for host, args in argu.items() %}{{host}}          IN  A   {{ args.ip }}
+{% if args.bmc is defined %}  {{args.bmc.name}}          IN  A   {{args.bmc.ip}}{% endif %}
+{% endfor %}{% endfor %}
+
 
