--- a/salt/dumb.jinja
+++ b/salt/dumb.jinja
@@ -7,40 +7,17 @@ sethostname:
 {% set group = salt['pillar.get']('engine_reverse:'~salt['grains.get']('id')~':group') %}
 {% set type = salt['pillar.get']('engine_reverse:'~salt['grains.get']('id')~':type') %}
 
+{{(salt['grains.get']('id')|replace(salt['pillar.get']('engine:network:domaine_name'), ''))}}
+
+{{group}}
+{{type}}
+
 {% if type == "masters" %}
-{% set netpath = type~":"~salt['grains.get']('host')~":network" %}
+{% set netpath = type~":"~(salt['grains.get']('id')|replace("."~salt['pillar.get']('engine:network:domaine_name'),''))~":network" %}
 {% else %}
-{% set netpath = type~":"~group~":"~salt['grains.get']('host')~":network" %}
-{% endif %}
-{% for network, argo in salt['pillar.get'](netpath).items() %}
-
-{% if network == "net0" and argo.interface == "auto" %}
-# auto interface enabled
-{% for interf, args in salt['grains.get']('ip_interfaces').items() %}
-{% for ips in args %}
-{% if salt['pillar.get']('engine:network:matchpatern') in ips %}
-{{interf}}:
-  network.managed:
-    - enabled: True
-    - type: eth
-    - proto: none
-    - ipaddr: {{ips}}
-    - netmask: {{salt['pillar.get']('engine:network:netmask')}}
-
-{% endif %}
-{% endfor %}
-{% endfor %}
+{% set netpath = type~":"~group~":"~(salt['grains.get']('id')|replace("."~salt['pillar.get']('engine:network:domaine_name'),''))~":network" %}
 {% endif %}
 
-{% if argo.interface != "auto" and argo.interface != "none" %}
-{{argo.interface}}:
-  network.managed:
-    - enabled: True
-    - type: eth
-    - proto: none
-    - ipaddr: {{argo.ip}}
-    - netmask: {{salt['pillar.get']("network:"~network~":netmask")}}
-{% endif %}
+{{netpath}}
 
-{% endfor %}
 
