Revert "update os_dvd.local.repo to centos_dvd.local.repo"
This reverts commit e5058b103171436b0aeb2b16fece407b8ca3580d.

--- a/salt/pxe/default.jinja
+++ b/salt/pxe/default.jinja
@@ -9,7 +9,7 @@ MENU TITLE Banquise PXE Menu
  LABEL centos7_x64
  MENU LABEL CentOS 7 X64
  KERNEL /netboot/vmlinuz
- APPEND  initrd=/netboot/initrd.img  inst.repo=http://{{salt['pillar.get']('engine:servers:pxe_server_ip')}}/centos_dvd.local.repo  ks=http://{{salt['pillar.get']('engine:servers:pxe_server_ip')}}/ks.cfg
+ APPEND  initrd=/netboot/initrd.img  inst.repo=http://{{salt['pillar.get']('engine:servers:pxe_server_ip')}}/os_dvd.local.repo  ks=http://{{salt['pillar.get']('engine:servers:pxe_server_ip')}}/ks.cfg
 
  LABEL localdisk
  KERNEL chain.c32 
