--- a/salt/repository/os_dvd.local.repo.jinja
+++ b/salt/repository/os_dvd.local.repo.jinja
@@ -1,6 +1,6 @@
 [os_dvd.local]
 name=OS base repository
-baseurl=http://{{salt['pillar.get']('engine:servers:repository_server_ip')}}/centos_dvd.local.repo
+baseurl=http://{{salt['pillar.get']('engine:servers:repository_server_ip')}}/os_dvd.local.repo
 gpgcheck=0
 enabled=1
 
